# setka

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_CONTEXT.md  CLAUDE.md  CLEANUP_REPORT.md  CLEAR_BROWSER_CACHE.sh  CONNECTION_TROUBLESHOOTING.md  CURSOR_FIX_SSL.md  CURSOR_VISUAL_EDITOR.md  DEVELOPMENT_SUMMARY.md  EDIT_NGINX_CONFIG.md  EXTERNAL_ACCESS_CHECK.md  FIX_REDIRECT_LOOP.md  GIT_INSTRUCTIONS.md  HOW_TO_DOWNLOAD_SECRETS.md  HOW_TO_EDIT_NGINX.md  NGINX_FIX_REPORT.md  PROJECT_STATUS.md  QUICK_START.md  README.md  README_EDIT_NGINX.txt  REFACTORING_2025_01_REPORT.md  SECURITY_STATUS.md  WORK_HOURS_CONFIG.md  _version.py  celery_app.py  create_github_repo.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  setka.conf.local
.claude/: settings.json
.codex/: hooks.json
config/: celery_config.py  classification_postulates.md  classification_postulates_learned.snapshot.md  classifier.py  gateway.py  nginx_setka.conf  prometheus.yml  radar_id.py  runtime.py  setka.conf.editable  setka.env.example
core/: __init__.py  exceptions.py
database/: connection.py  models.py  models_extended.py  schema.sql
docs/: AI_DEV_GUIDE.md  AI_SOLUTION.md  BULLETIN_FIX_PLAN.md  COMMUNITY_URL_PARSER.md  DEPLOY.md  DEVELOPMENT_HISTORY.md  DEVELOPMENT_PLAN.md  DEV_HISTORY.md  DIGEST_FIX_PLAN.md  GATEWAY.md  GITHUB_PUSH.md  INDEX.md  MCP_SETUP_VSCODE.md  MIGRATION_GUIDE.md  OLD_PROJECT_SUMMARY.md  OPERATIONS.md  PENDING_FOLLOWUPS.md  PERFORMANCE_OPTIMIZATION.md  PROMETHEUS_GRAFANA_SETUP.md  QUICK_START_FOR_AI.md  README.md  REGIONS_HIERARCHY.md  (+16 more)
(+746 files in other folders)
